# EventLoop

./: .gitignore  CMakeLists.txt
example/: main.c  multi_producer_test.c
include/: event_loop.h
src/: event_loop.c
